Changed ListCellText to use v-textarea instead of v-text-field; enables word-wrap. Fixed sidebar growing too wide.

--- a/tab-app/src/assets/styles/listcell.css
+++ b/tab-app/src/assets/styles/listcell.css
@@ -2,6 +2,13 @@
  * listcell.css
  */
 
-.textfield	{
+.text-field	{
 	padding: 0px;
+	min-width: 130px;
+}
+.header-field  {
+	/*margin: 0px;*/
+	padding: 0px;
+	min-width: 130px;
+	border-bottom: 1px solid rgba(0,0,0,0.125);
 }
