--- a/tab-app/src/assets/styles/thelist.css
+++ b/tab-app/src/assets/styles/thelist.css
@@ -62,6 +62,9 @@ input {
     padding-right: 	20px;*/
 
     border-radius: 5px;
+
+    min-width: 500px;
+    overflow: scroll;
 }
 .list-head	{
 	margin: 0px;
